--- a/ExChat/Resource/GoogleService-Info.plist
+++ b/ExChat/Resource/GoogleService-Info.plist
@@ -3,21 +3,21 @@
 <plist version="1.0">
 <dict>
 	<key>CLIENT_ID</key>
-	<string>322994072032-3m9ilmuei94olos212e4rlbmqngg33ls.apps.googleusercontent.com</string>
+	<string>265765996694-7tav3srrqg62cehubbbb1a3ku3vvi288.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.322994072032-3m9ilmuei94olos212e4rlbmqngg33ls</string>
+	<string>com.googleusercontent.apps.265765996694-7tav3srrqg62cehubbbb1a3ku3vvi288</string>
 	<key>API_KEY</key>
-	<string>AIzaSyBDuUSz_rYSZKBencYTyJdgw-BupaFOCDo</string>
+	<string>AIzaSyCEgVDlKPcsccOGYMTchy7MQ-VNuoWXZxk</string>
 	<key>GCM_SENDER_ID</key>
-	<string>322994072032</string>
+	<string>265765996694</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
 	<string>com.jake.ExChat</string>
 	<key>PROJECT_ID</key>
-	<string>exchat-b8fd9</string>
+	<string>exrealtimechat</string>
 	<key>STORAGE_BUCKET</key>
-	<string>exchat-b8fd9.appspot.com</string>
+	<string>exrealtimechat.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
 	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
@@ -29,6 +29,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:322994072032:ios:14fe4045859c2a4345a385</string>
+	<string>1:265765996694:ios:c22bf5528840f5235ddab7</string>
 </dict>
 </plist>
